Changed output file type to Word doc.

--- a/Exploring Markdown.Rmd
+++ b/Exploring Markdown.Rmd
@@ -2,29 +2,28 @@
 title: "Exploring Markdown"
 author: "Me"
 date: "8/7/2021"
-output: html_document
+output: word_document
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+# R Markdown
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+I am exploring the capabilities of Markdown in RStudio.
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r}
-summary(cars)
+```{r first}
+x <- "variable"
+print(x)
 ```
 
 ## Including Plots
 
-You can also embed plots, for example:
+What is the scope of my variable x? Can it be seen in the following code chunk?
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r scope}
+print(x)
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
